--- a/main_styling.less
+++ b/main_styling.less
@@ -1,10 +1,3 @@
-//.transform (@val,@time1,@pro,@time2) {
-//  -moz-transform: @val @time1 @pro @time2;
-//  -ms-transform: @val @time1 @pro @time2;
-//  -webkit-transform: @val @time1 @pro @time2;
-//  -o-transform: @val @time1 @pro @time2;
-//  transform:@val @time1 @pro @time2;
-//}
 .transition (@val,@time,@pro) {
   -moz-transition: @val @time @pro;
   -ms-transition: @val @time @pro;
@@ -18,12 +11,13 @@
   text-shadow:0 0 1px rgba(0,0,0,0.1);
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
-  box-sizing: border-box;   
-}
-*:after, *:before {
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  box-sizing: border-box;   
+  box-sizing: border-box;
+  &::before,
+  &::after {
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing: border-box;
+  }
 }
 .cb{
 	-moz-box-sizing:content-box;
@@ -37,9 +31,6 @@
 ::-moz-selection{
 	background: #986794;	
 	color: #fff;
-}
-[class^="fa-"]{
-  .transition(all,.3s,ease-in-out);
 }
 body {
   background:none repeat scroll 0 0 #eeeeee;
@@ -92,7 +83,6 @@ blockquote {
     vertical-align:-.4em;
   }
 }
-
 pre {
  white-space: pre-wrap;       
  white-space: -moz-pre-wrap; 
@@ -100,22 +90,18 @@ pre {
  white-space: -o-pre-wrap;
  word-wrap: break-word;
 }
-//.transition {
-//  -moz-transform: all 0.1s ease 0s;
-//  -ms-transform: all 0.1s ease 0s;
-//  -webkit-transform: all 0.1s ease 0s;
-//  -o-transform: all 0.1s ease 0s;
-//  transition:all 0.1s ease 0s;
-//}
-.clearfix:before, .container:after {
-  content:"";
-  display:table;
-}
-.clearfix:after {
-  clear:both;
+[class^="fa-"]{
+  .transition(all,.3s,ease-in-out);
 }
 .clearfix {
   zoom:1;
+  &::before {
+    content:"";
+    display:table;
+  }
+  &::after {
+    clear:both;
+  }
 }
 .none {
   display:none;
@@ -437,7 +423,7 @@ nav.search {
   .right {
     background-color: #F4F4F4;
     border-left: 1px solid #D6D6D6;
-    &:after {
+    &::after {
       clear: both;
       content: "";
       display: block;
@@ -651,6 +637,50 @@ nav.filters {
 #page-wrap {
   margin:0 auto;
   width:960px;
+  .bookmarks{
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    -moz-box-sizing: content-box;
+    background: none repeat scroll 0 0 #FAFAFA;
+    border-color: #D8D8D8;
+    border-image: none;
+    border-left: 1px solid #D8D8D8;
+    border-right: 1px solid #D8D8D8;
+    border-style: solid;
+    border-width: 0 1px 2px;
+    display: block;
+    margin: 0 auto 20px;
+    margin-top: 20px;
+    position: relative;
+    overflow: hidden;
+    width: 960px;
+    a {
+      background: none repeat scroll 0 0 #FAFAFA;
+      border-right: 1px solid #DDDDDD;
+      border-top: 1px solid #DDDDDD;
+      color: #5B6064;
+      display: block;
+      float: left;
+      font-size: 14px;
+      font-weight: 300;
+      line-height: 60px;
+      text-align: center;
+      vertical-align: middle;
+      width: 20%;
+      &:first-child,&:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5){
+        border-bottom: none;
+      }
+      &:nth-child(5n){
+        border-right: none;
+      }
+      &:hover{
+        background: none repeat scroll 0 0 #5B6064;
+        color: #FFFFFF;
+      }
+    }
+  }
   .right-toolbar{
 	bottom: 20px;
 	display: block;
@@ -686,6 +716,65 @@ nav.filters {
     margin:20px 0 0 0;
     position:relative;
     width:960px;
+    &.wrap-work {
+      height: auto;
+      overflow: hidden;
+      .title {
+        background-color: #fafafa;
+        border: 1px solid #dddddd;
+        padding: 20px 10px 20px;
+        margin-right: 0;
+        width: 60px;
+        height: 600px;
+        overflow: hidden;
+        position: relative;
+        text-align:center;
+        &::after {
+          clear: both;
+        }
+        h2 {
+          color: #a09f9f;
+          font-size: 32px;
+          word-wrap: break-word;
+          vertical-align:middle;
+          writing-mode: vertical-lr;
+          -webkit-writing-mode:vertical-lr;
+        }
+      }
+      .work-content {
+        width: 90%;
+        margin-left: 10px;
+        height: auto;
+        overflow: hidden;
+        .work-container {
+          position: relative;
+          width: auto;
+          height: auto;
+          overflow: hidden;
+          .content-title {
+            color: #a09f9f;
+            font-size: 32px;
+            border-bottom: 1px solid #a09f9f;
+            h2 {
+
+            }
+          }
+          .content-list {
+            position: relative;
+            width: auto;
+            height: auto;
+            overflow: hidden;
+          }
+        }
+        &::after {
+          clear: both;
+        }
+        &.right {
+          float: right;
+          clear: right;
+        }
+      }
+    }
     &.wrap-pixiv{
       background: #ffffff;
       border: 1px solid #dddddd;
@@ -1131,6 +1220,37 @@ nav.filters {
                 }
               }
             }
+            .tag {
+              ul {
+                &.show {
+                  li {
+                    &:hover {
+                      background-color: #4A6E68;
+                      .tag-bar {
+                        background-color: #4A6E68;
+                      }
+                    }
+                  }
+                }
+                li{
+                  &:nth-child(even) {
+                    .tag-bar {
+                      background-color: #8FD4C9;
+                    }
+                  }
+                  &:nth-child(odd) {
+                    .tag-bar {
+                      background-color: #A9FBED;
+                    }
+                  }
+                  &:first-child {
+                    .tag-bar {
+                      background-color: #4A6E68 !important;
+                    }
+                  }
+                }
+              }
+            }
           }
         }
         &.format-aside {
@@ -1142,6 +1262,37 @@ nav.filters {
               .back {
                 a {
                   background-color: #dcad9e;
+                }
+              }
+            }
+            .tag {
+              ul {
+                &.show {
+                  li {
+                    &:hover {
+                      background-color: #5C4942;
+                      .tag-bar {
+                        background-color: #5C4942;
+                      }
+                    }
+                  }
+                }
+                li{
+                  &:nth-child(even) {
+                    .tag-bar {
+                      background-color: #C2998C;
+                    }
+                  }
+                  &:nth-child(odd) {
+                    .tag-bar {
+                      background-color: #E9B7A7;
+                    }
+                  }
+                  &:first-child {
+                    .tag-bar {
+                      background-color: #5C4942 !important;
+                    }
+                  }
                 }
               }
             }
@@ -1159,6 +1310,37 @@ nav.filters {
                 }
               }
             }
+            .tag {
+              ul {
+                &.show {
+                  li {
+                    &:hover {
+                      background-color: #51492D;
+                      .tag-bar {
+                        background-color: #51492D;
+                      }
+                    }
+                  }
+                }
+                li{
+                  &:nth-child(even) {
+                    .tag-bar {
+                      background-color: #B7A366;
+                    }
+                  }
+                  &:nth-child(odd) {
+                    .tag-bar {
+                      background-color: #DEC57B;
+                    }
+                  }
+                  &:first-child {
+                    .tag-bar {
+                      background-color: #51492D !important;
+                    }
+                  }
+                }
+              }
+            }
           }
           .post-thumb {
             border-top: 1px solid #e5e5e5;
@@ -1173,6 +1355,37 @@ nav.filters {
               .back {
                 a {
                   background-color: #19caad;
+                }
+              }
+            }
+            .tag {
+              ul {
+                &.show {
+                  li {
+                    &:hover {
+                      background-color: #094A40;
+                      .tag-bar {
+                        background-color: #094A40;
+                      }
+                    }
+                  }
+                }
+                li{
+                  &:nth-child(even) {
+                    .tag-bar {
+                      background-color: #16B097;
+                    }
+                  }
+                  &:nth-child(odd) {
+                    .tag-bar {
+                      background-color: #1BD7B8;
+                    }
+                  }
+                  &:first-child {
+                    .tag-bar {
+                      background-color: #094A40 !important;
+                    }
+                  }
                 }
               }
             }
@@ -1329,6 +1542,12 @@ nav.filters {
                     box-shadow: 0 0 20px rgba(0,0,0,.2);
                     background-color: #404040;
                     max-width: 360px;
+                    cursor: pointer;
+                    display: block;
+                    white-space: nowrap;
+                    .tag-bar {
+                      background-color: #404040;
+                    }
                   }
                   a {
                     color: #999;
@@ -1337,9 +1556,6 @@ nav.filters {
                   }
                   &:first-child {
                     &:hover {
-                      box-shadow: 0 0 20px rgba(0,0,0,.2);
-                      background-color: #404040;
-                      max-width: 360px;
                       a {
                         color: #fff;
                       }
@@ -1347,12 +1563,6 @@ nav.filters {
                   }
                   &:nth-child(odd) {
                     &:hover {
-                      cursor: pointer;
-                      display: block;
-                      white-space: nowrap;
-                      .tag-bar {
-                        background-color: #404040;
-                      }
                       a {
                         color: #fff;
                         opacity: 1;
@@ -1362,12 +1572,6 @@ nav.filters {
                   }
                   &:nth-child(even) {
                     &:hover {
-                      cursor: pointer;
-                      display: block;
-                      white-space: nowrap;
-                      .tag-bar {
-                        background-color: #404040;
-                      }
                       a {
                         color: #fff;
                         opacity: 1;
@@ -1892,53 +2096,6 @@ nav.filters {
     border-right-color:transparent;
   }
 }
-
-
-.bookmarks{
-  -moz-border-bottom-colors: none;
-  -moz-border-left-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-top-colors: none;
-  -moz-box-sizing: content-box;
-  background: none repeat scroll 0 0 #FAFAFA;
-  border-color: #D8D8D8;
-  border-image: none;
-  border-left: 1px solid #D8D8D8;
-  border-right: 1px solid #D8D8D8;
-  border-style: solid;
-  border-width: 0 1px 2px;
-  display: block;
-  margin: 0 auto 20px;
-  margin-top: 20px;
-  position: relative;
-  overflow: hidden;
-  width: 960px;
-    a {
-      background: none repeat scroll 0 0 #FAFAFA;
-      border-right: 1px solid #DDDDDD;
-      border-top: 1px solid #DDDDDD;
-      color: #5B6064;
-      display: block;
-      float: left;
-      font-size: 14px;
-      font-weight: 300;
-      line-height: 60px;
-      text-align: center;
-      vertical-align: middle;
-      width: 20%;
-    &:first-child,&:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5){
-      border-bottom: none;
-    }
-    &:nth-child(5n){
-      border-right: none;
-    }
-      &:hover{
-          background: none repeat scroll 0 0 #5B6064;
-          color: #FFFFFF;
-      }
-  }
-}
-
 
 footer {
   margin:20px auto;
