--- a/main_styling.less
+++ b/main_styling.less
@@ -755,6 +755,7 @@ nav.filters {
             color: #a09f9f;
             font-size: 32px;
             border-bottom: 1px solid #a09f9f;
+            margin: 0 auto 20px;
             h2 {
 
             }
