fixed the issue on comment
fixed the issue on comment

--- a/main_styling.less
+++ b/main_styling.less
@@ -1375,7 +1375,7 @@ nav.filters {
                    }
                    &:nth-child(odd) {
                      .tag-bar {
-                       background-color: #DA5661;
+                       background-color: #FF6471;
                      }
                    }
                    &:first-child {
@@ -1956,6 +1956,7 @@ nav.filters {
       height:auto;
       overflow:hidden;
       padding-bottom:15px;
+      width: 100%;
       .comment-body {
         width:100%;
         font-size:14px;
