--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ Theme URI: http://moe.akibarika.org
 Author: Rika Akiba
 Author URI: http://moe.akibarika.org
 Description: AkibaRika site theme. 
-Version: 2.7
-License: CC BY-NC-SA 3.0
+Version: 2.8
+License: CC BY-NC-SA 4.0
 */
 
 
@@ -46,4 +46,96 @@ License: CC BY-NC-SA 3.0
     font-style: normal;
     font-weight: 700;
     src: local('Raleway Bold'), local('Raleway-Bold'), url(http://themes.googleusercontent.com/static/fonts/raleway/v7/JbtMzqLaYbbbCL9X6EvaIxsxEYwM7FgeyaSgU71cLG0.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'icomoon';
+    src:url('fonts/icomoon.eot?5x37hp');
+    src:url('fonts/icomoon.eot?#iefix5x37hp') format('embedded-opentype'),
+    url('fonts/icomoon.woff?5x37hp') format('woff'),
+    url('fonts/icomoon.ttf?5x37hp') format('truetype'),
+    url('fonts/icomoon.svg?5x37hp#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-angle-up:before {
+    content: "\f106";
+}
+.icon-angle-down:before {
+    content: "\f107";
+}
+.icon-foursquare:before {
+    content: "\f180";
+}
+.icon-weibo:before {
+    content: "\f18a";
+}
+.icon-user:before {
+    content: "\e600";
+}
+.icon-screen:before {
+    content: "\e602";
+}
+.icon-mail:before {
+    content: "\e603";
+}
+.icon-link:before {
+    content: "\e601";
+}
+.icon-search:before {
+    content: "\e604";
+}
+.icon-bookmark:before {
+    content: "\e605";
+}
+.icon-folder-open:before {
+    content: "\e606";
+}
+.icon-tags:before {
+    content: "\e607";
+}
+.icon-redo:before {
+    content: "\e608";
+}
+.icon-bubbles:before {
+    content: "\e609";
+}
+.icon-info:before {
+    content: "\e60a";
+}
+.icon-plus:before {
+    content: "\e60b";
+}
+.icon-code:before {
+    content: "\e60c";
+}
+.icon-share:before {
+    content: "\e60d";
+}
+.icon-googleplus:before {
+    content: "\e60e";
+}
+.icon-instagram:before {
+    content: "\e60f";
+}
+.icon-twitter:before {
+    content: "\e610";
+}
+.icon-flickr:before {
+    content: "\e611";
 }
