--- a/css/styles.less
+++ b/css/styles.less
@@ -402,6 +402,11 @@ pre {
             background-color: #d6d6d6 !important;
           }
         }
+        &.current_page_item {
+          a {
+            background-color: #d6d6d6;
+          }
+        }
         &.search{
           display: block;
           span{
