insert images within figure elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ Theme URI: http://moe.akibarika.org
 Author: Rika Akiba
 Author URI: http://moe.akibarika.org
 Description: AkibaRika site theme.
-Version: 2.8.1
+Version: 2.8.2
 License: CC BY-NC-SA 4.0
 */
 * {
@@ -1240,6 +1240,11 @@ pre {
   margin: 5px 0 30px 0;
   text-align: center;
 }
+#page-wrap #single.wrap-single .post-detail {
+  height: auto;
+  overflow: hidden;
+  position: relative;
+}
 #page-wrap #single.wrap-single .post-detail a:not(.img) {
   color: #ba89b6;
   display: inline-block;
@@ -1330,11 +1335,31 @@ pre {
   line-height: 180%;
   padding: 0;
 }
+#page-wrap #single.wrap-single .post-detail figure {
+  display: block;
+  position: relative;
+}
+#page-wrap #single.wrap-single .post-detail figure.alignleft {
+  float: left;
+  clear: left;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  margin-top: 10px;
+}
+#page-wrap #single.wrap-single .post-detail figure.alignright {
+  float: right;
+  clear: right;
+  margin-bottom: 10px;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+#page-wrap #single.wrap-single .post-detail figure.aligncenter {
+  margin: 10px auto;
+  text-align: center;
+}
 #page-wrap #single.wrap-single .post-detail img {
   border: 1px solid #dddddd;
   border-radius: 4px;
-  display: block;
-  margin: 0 auto;
   height: auto;
   padding: 4px;
   max-width: 750px;
