upgrade aside post title style

--- a/css/styles.less
+++ b/css/styles.less
@@ -1614,6 +1614,12 @@ pre {
                 }
               }
             }
+            .post-title {
+              a::before {
+                display: inline-block;
+                content: '@';
+              }
+            }
             .tag {
               ul {
                 &.show {
