--- a/css/styles.css
+++ b/css/styles.css
@@ -1662,6 +1662,10 @@ pre {
 .container #post .item .wrap-content.format-aside .heading .avatar-icon .back a {
   background-color: #dcad9e;
 }
+.container #post .item .wrap-content.format-aside .heading .post-title a::before {
+  display: inline-block;
+  content: '@';
+}
 .container #post .item .wrap-content.format-aside .heading .tag ul.show li:hover {
   background-color: #5C4942;
 }
